fixed nav item spacing layout

--- a/sprint-one/styles/partials/_header.scss
+++ b/sprint-one/styles/partials/_header.scss
@@ -9,6 +9,7 @@
 	color: #fff;
 	@include tablet() {
 		flex-direction: row;
+		justify-content: flex-start;
 		padding-left: 24px;
 	}
 
@@ -21,6 +22,7 @@
 		width: 100%;
 		height: 50%;
 		@include tablet() {
+			width: 284px;
 			height: 100%;
 		}
 
@@ -30,6 +32,10 @@
 			justify-content: space-around;
 			align-items: center;
 			height: 100%;
+			@include tablet() {
+				justify-content: space-evenly;
+				padding-left: 30px;
+			}
 		}
 
 		&__link {
@@ -49,6 +55,9 @@
 			color: $text-label-style;
 			font-size: 0.9rem;
 			text-transform: capitalize;
+			@include tablet() {
+				width: 80px;
+			}
 			&--active {
 				color: #fff;
 				font-family: $font-medium;
